syntax = "proto3";

option go_package = "/genproto/community";

package community;

service CommunityService {
  rpc CreateCommunity(CreateRequest) returns (CreateResponse) {}
  rpc GetCommunityByID(GetCommunityRequest) returns (GetCommunityResponse) {}
  rpc UpdateCommunityByID(UpdateCommunityRequest) returns (UpdateCommunityResponse) {}
  rpc DeleteCommunityByID(DeleteCommunityRequest) returns (DeleteCommunityResponse) {}
  rpc GetAllCommunities(GetCommunitiesRequest) returns (GetCommunitiesResponse) {}
  rpc JoinCommunityMember(JoinMemberRequest) returns (JoinMemberResponse) {}
  rpc LeftCommunityMember(LeftMemberRequest) returns (LeftMemberResponse) {}
  rpc JoinCommunityEvent(JoinEventRequest) returns (JoinEventResponse) {}
  rpc GetEventByID(GetEventsRequest) returns (GetEventsResponse) {}
  rpc JoinCommunityForum(JoinForumRequest) returns (JoinForumResponse) {}
  rpc GetForumByID(GetForumRequest) returns (GetForumResponse) {}
  rpc AddCommentForum(AddCommentRequest) returns (AddCommentResponse) {}
  rpc GetForumCommentByID(GetForumCommentRequest) returns (GetForumCommentResponse) {}
}

message CreateRequest {
  string Name = 1;
  string Description = 2;
  string Location = 3;
}

message CreateResponse {
  string message = 1;
}

message GetCommunityRequest {
  string CommunityID = 1;
}

message GetCommunityResponse {
  string Name = 2;
  string Description = 3;
  string Location = 4;
}

message UpdateCommunityRequest {
  string CommunityID = 1;
  string Name = 2;
  string Description = 3;
  string Location = 4;
}

message UpdateCommunityResponse {
  bool success = 1;
}

message DeleteCommunityRequest {
  string CommunityID = 1;
}

message DeleteCommunityResponse {
  bool success = 1;
}

message GetCommunitiesRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetCommunitiesResponse {
  repeated Community communities = 1;
  int32 total = 2;
}

message JoinMemberRequest {
  string CommunityID = 1;
  string UserID = 2;
}

message JoinMemberResponse {
  bool success = 1;
}

message LeftMemberRequest {
  string CommunityID = 1;
  string UserID = 2;
}

message LeftMemberResponse {
  bool success = 1;
}

message JoinEventRequest {
  string CommunityID = 1;
  string Description = 2;
  string Name = 3;
  string Type = 4;
  string Location = 7;
}

message JoinEventResponse {
  bool success = 1;
}

message GetEventsRequest {
  string EventID = 1;
}

message GetEventsResponse {
  Event event = 1;
}

message JoinForumRequest {
  string CommunityID = 1;
  string UserID = 2;
  string Title = 3;
  string Content = 4;
}

message JoinForumResponse {
  bool success = 1;
}

message GetForumRequest {
  string ForumID = 1;
}

message GetForumResponse {
  Forum forum = 1;
}

message AddCommentRequest {
  Comment request = 1;
}

message AddCommentResponse {
  bool success = 1;
}

message GetForumCommentRequest {
  string UserID = 1;
}

message GetForumCommentResponse {
  Comment comment = 1;
}

message Community {
  string CommunityID = 1;
  string Name = 2;
  string Description = 3;
  string Location = 4;

}

message Event {
  string EventID = 1;
  string CommunityID = 2;
  string Description = 3;
  string Name = 4;
  string Type = 5;
  string Location = 8;
}

message Forum {
  string id = 1;
  string CommunityID = 2;
  string UserID = 3;
  string title = 4;
  string content = 5;
}

message Comment {
  string ForumID = 1;
  string UserID = 2;
  string Content = 3;
}